[tool.poetry]
name = "pyflink-data-processor"
version = "0.1.0"
description = "Data Processor for pyflink"
authors = ["nupsea <eanups@yahoo.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "pyflink_data_processor"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
