[tool.poetry]
name = "pyflink-data-processor"
version = "0.1.0"
description = "Data Processor for pyflink"
authors = ["nupsea <eanups@yahoo.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "pyflink_data_processor"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
apache-flink = "1.17.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
